# Document_Binarization_SSP

./: README.md  readme.txt
C_plus_plus_Project/: CMakeLists.txt  TextGraphichSeperationBulk.cpp  TextGraphichSeperationBulk.h  TextGraphicsSeperation.cpp
C_plus_plus_Project/ImageFiltering/hdr/: AnisotropicGaussianFilter.h
C_plus_plus_Project/util/: BasicAlgo.cpp  DirectoryHandler.cpp
C_plus_plus_Project/util/hdr/: BasicAlgo.h  DirectoryHandler.hpp
Matlab_Code/: CleanImageFinally.m  GradientComputation.m  LittleTests.m  MultipleThresholdVoteBinarization.m  PerformCannyEdge.m  PerformSymmetryOperation_3.m  PerformSymmetryOperation_4.m  RemoveUnwantedPixels.m  RunBinarizationAllImg_1.m  Run_Bulk_BackGd_Removal.m  SaveBackGdRemovedImage.m  SeperateClustersCreateImageForBin.m  SeperateIntoFolders.m  changeNames.m  displayImage.cpp  doBackGdRemoval.m  niblack.m  runOnAllImgs.m  testBinSingleImag.m
Matlab_Code/Dataset/All_BackGd/: H01_DIBCO_2010.tif  H03_DIBCO_2010.tif  H06_DIBCO_2010.tif  HW06_DIBCO_13.tiff  HW08_DIBCO_13.tiff
Matlab_Code/Dataset/All_Results/: H01_DIBCO_2010.tif  H03_DIBCO_2010.tif  H06_DIBCO_2010.tif  HW06_DIBCO_13.tiff  HW08_DIBCO_13.tiff
Matlab_Code/Dataset/All_Results_Grad/: H01_DIBCO_2010.tif  H03_DIBCO_2010.tif  H06_DIBCO_2010.tif  HW06_DIBCO_13.tiff  HW08_DIBCO_13.tiff
Matlab_Code/Dataset/Seperated_All_Results/: PR_Metric_DIBCO_09.bat  PR_Metric_DIBCO_10.bat  PR_Metric_DIBCO_11.bat  PR_Metric_DIBCO_12.bat  PR_Metric_DIBCO_13.bat  PR_Metric_DIBCO_14.bat  PR_Metric_DIBCO_16.bat  PR_Metric_DIBCO_17.bat  evalMetric_09.bat  evalMetric_10.bat  evalMetric_12.bat  evalMetric_13.bat  evalMetric_14.bat  evalMetric_16.bat  evalMetric_17.bat
Matlab_Code/Dataset/Seperated_All_Results/All_Results_Metrics/: DIBCO_09_BinResults.txt  DIBCO_10_BinResults.txt  DIBCO_11_BinResults.txt  DIBCO_12_BinResults.txt  DIBCO_13_BinResults.txt  DIBCO_14_BinResults.txt  DIBCO_16_BinResults.txt  DIBCO_17_BinResults.txt  allResultsBinarization.txt  readLineCalcStats.m
Matlab_Code/Extra_Code/: DynamicWindowBasedBinarizatoin.m  ExtractBinaryFeatures.m  RemoveUnwantedPixels_Niblack.m  SeperateClustersFeatureImage.m
Matlab_Code/FRFCM/: CreateDiplomasClustersBulk.m  DIBCO+17.txt  ExtractFillesImportant.m  Horizontal_Projection_Based_Line_Segmentation.m  LittleTests.m  SeperateClustersCreateImage.m  applyClustering.m  calcStats.m  changeNameToCSV.m  changeNames.m  extractFoldersFiles.m  fcm.m  imageBlurringPortions.m  main_gray.m  main_gray_diploma.m  readCSVToMat.m  readLineCalcStats.m
